--- a/Objects.tex
+++ b/Objects.tex
@@ -49,6 +49,9 @@ Depending on the choice of the parameter $p$, different types of algorithms are 
 \end{description}
 
 \subsection{Jet Types at CMS}
+\label{subsec:jets_types}
+The default jets used at the CMS experiment are jets clustered by the anti-$k_\mathrm{T}$ algorithm using a distance parameter of $R = 0.5$ (AK5 jets). This can be applied to reconstructed detector signals resulting in \textit{detector-level} jets or to final-state particles after hadronisation and decay, in simulated events, giving rise to \textit{particle-level} jets.  \\
+Based on the information used from the various CMS subdetectors for the jet clustering, different types of detector-level jets are distinguished~\cite{1748-0221-6-11-P11002}:
 \begin{figure}[!tp]
   \centering 
   \begin{tabular}{c}
@@ -57,14 +60,11 @@ Depending on the choice of the parameter $p$, different types of algorithms are 
   \caption{Composition of the PF jet energy versus jet \pt in the barrel detector region $|\eta| < 1.3$ in simulated events (coloured histograms) and data (solid markers)~\cite{CMS-DP-2012-012}.}
   \label{fig:jets_pf_comp}
 \end{figure}
-\label{subsec:jets_types}
-The default jets used at the CMS experiment are jets clustered by the anti-$k_\mathrm{T}$ algorithm using a distance parameter of $R = 0.5$ (AK5 jets). This can be applied to reconstructed detector signals resulting in \textit{detector-level} jets or to final-state particles after hadronisation and decay, in simulated events, giving rise to \textit{particle-level} jets.  \\
-Based on the information used from the various CMS subdetectors for the jet clustering, different types of detector-level jets are distinguished~\cite{1748-0221-6-11-P11002}:
 \begin{description}
  \item \textbf{Calorimeter (Calo) jets:} Calo jets are clustered from energy deposits in the calorimeters. For this purpose, calorimeter towers are defined which consist of at least one HCAL cell and the geometrically associated ECAL cells. For instance in case of the barrel detector region, a calorimeter tower consists of one HCAL cell and $\mathrm{5 \times 5}$ ECAL cells. The four-momentum of each tower is defined by the tower position as seen from the primary interaction vertex and the energy deposit in the tower, above a certain threshold assuming a mass of zero. 
  \item \textbf{Jet-Plus-Track (JPT) jets:} JPT jets are reconstructed from calorimeter jets complemented by tracking information~\cite{CMS-PAS-JME-09-002}. Tracks of charged particles can be associated to calo jets based on the separation of the jet axis and the momentum vector of the track in the $(\eta,\phi)$-plane. Associated tracks are projected to the jet cone and are exploited to correct the jet energy and direction. 
  \item \textbf{Particle-Flow (PF) jets:} PF jets are clustered from the four-momentum vectors of particle-flow candidates as identified by the PF algorithm described in Section~\ref{sec:pf_algo}. Typically, these types of jets show the best performance as the excellent resolution of the tracking system and the ECAL are utilized. Only neutral hadrons which constitute around 15\% of the jet energy (cf. Fig.~\ref{fig:jets_pf_comp}) rely on the energy measurement of the HCAL with its relatively poor resolution. Thus, PF jets are the default jets to be used at the CMS experiment, as it is done within this thesis. In order to mitigate influences from pile-up, charged hadrons unambigously associated to vertices other than the primary vertex can be removed from the jet algorithm input list before the actual jet clustering is performed. This technique is referred to as \textit{charged hadron subtraction} (CHS) and used as default throughout this thesis. 
-00\end{description}
+\end{description}
 
 \subsection{Jet Transverse-Momentum Response}
 \label{subsec:jets_response}
@@ -187,7 +187,7 @@ p_{\mathrm{T},i} < f_{\mathrm{cut}} \cdot \Lambda_{\mathrm{hard}} \; ,
 \end{equation*}
 the contributions from subjet $i$ to the seed jet are removed. Here, $f_{\mathrm{cut}}$ is a fixed dimensionless parameter and $\Lambda_{\mathrm{hard}}$ a scale chosen with respect to the specific kinematics of the event. While $f_{\mathrm{cut}}$ quantifies the expected hierarchy between FSR and ISR or pileup, the hard scale $\Lambda_{\mathrm{hard}}$ usually represents the transverse momentum of the seed jet or the effective mass of the event.% which is the scalar sum of the transverse momenta.
 \end{description} 
-In order to identify decays of boosted hadronic top quarks, as discussed above, several top tagging algorithms (or short \textit{taggers}) are commissioned within the CMS experiment~\cite{CMS:2014fya, CMS-DP-2014-036}. Two of them are used within this thesis:
+In order to identify decays of boosted hadronic top quarks, as discussed above, several top tagging algorithms (or short \textit{taggers}) are commissioned within the CMS experiment~\cite{CMS-PAS-JME-13-007, CMS-DP-2014-036}. Two of them are used within this thesis:
 \begin{description}
 \begin{figure}[!tp]
   \centering 
@@ -195,24 +195,24 @@ In order to identify decays of boosted hadronic top quarks, as discussed above, 
     \includegraphics[width=0.49\textwidth]{figures/Draw2HistogramsFrom1File_QQ_MASS_CUT_PT_TT_MASS_CUT_PT_JetPt500.pdf} & 
     \includegraphics[width=0.49\textwidth]{figures/Draw2HistogramsFrom1File_QQ_MINM_CUT_PT_MASS_NSUB_TT_MINM_CUT_PT_MASS_NSUB_JetPt500.pdf}
   \end{tabular}
-  \caption{Jet mass (\textit{left}) and minimum pairwise subjet mass (\textit{right}) for CA8 jets with $\pt > 500$\gev from a simulated $t\bar{t}$ \powheg sample (red) and from a simulated QCD \pythia sample (black). Taken from~\cite{CMS:2014fya}.}
+  \caption{Jet mass (\textit{left}) and minimum pairwise subjet mass (\textit{right}) for CA8 jets with $\pt > 500$\gev from a simulated $t\bar{t}$ \powheg sample (red) and from a simulated QCD \pythia sample (black). Taken from~\cite{CMS-PAS-JME-13-007}.}
   \label{fig:boosted_top_cms_variables}
 \end{figure}
- \item \textbf{CMS Top Tagger:} The CMS Top Tagger~\cite{CMS-PAS-JME-09-001} is based on the top tagger developed by Kaplan et al.~\cite{Kaplan:2008ie} and acts on jets clustered by the Cambrigde-Aachen algorithm with distance parameter $R = 0.8$. These jets, used as input for the algorithm, are denoted as \textit{hard jets}. Since the decay products of the hadronic top are not expected to be all contained within one jet with $R = 0.8$ for low transverse momenta of the top quark, only jets with $\pt^\mathrm{jet} > 350$\gev are considered. In order to identify subjets within the hard jets, a two-stage decomposition procedure is applied which performs the pairwise clustering sequence used to form the hard jet in reverse order. First, the algorithm aims at splitting the hard jet into two subclusters (\textit{primary decomposition}). Second, it is attempted to further split the clusters emerging from the first step (\textit{secondary decomposition}). Typically, subjets are found when they are spatially well separated and carry a significant fraction of the momentum of the hard jet. Details on the actual splitting criteria can be found in~\cite{CMS:2014fya}. With this approach, up to four subjets are identified within the hard jet. After a successful decomposition procedure, kinematic criteria can be applied to the identified subjets in order to tag top jets. In the CMS top-tagging algorithm, as employed in this thesis, the following criteria are used:
+ \item \textbf{CMS Top Tagger:} The CMS Top Tagger~\cite{CMS-PAS-JME-09-001} is based on the top tagger developed by Kaplan et al.~\cite{Kaplan:2008ie} and acts on jets clustered by the Cambrigde-Aachen algorithm with distance parameter $R = 0.8$. These jets, used as input for the algorithm, are denoted as \textit{hard jets}. Since the decay products of the hadronic top are not expected to be all contained within one jet with $R = 0.8$ for low transverse momenta of the top quark, only jets with $\pt^\mathrm{jet} > 350$\gev are considered. In order to identify subjets within the hard jets, a two-stage decomposition procedure is applied which performs the pairwise clustering sequence used to form the hard jet in reverse order. First, the algorithm aims at splitting the hard jet into two subclusters (\textit{primary decomposition}). Second, it is attempted to further split the clusters emerging from the first step (\textit{secondary decomposition}). Typically, subjets are found when they are spatially well separated and carry a significant fraction of the momentum of the hard jet. Details on the actual splitting criteria can be found in~\cite{CMS-PAS-JME-13-007}. With this approach, up to four subjets are identified within the hard jet. After a successful decomposition procedure, kinematic criteria can be applied to the identified subjets in order to tag top jets. In the CMS top-tagging algorithm, as employed in this thesis, the following criteria are used:
 \begin{description}
  \item -- Number of subjets $\ge$ 3
  \item -- The jet mass $m_{\mathrm{jet}}$, \ie the mass of the four-vector sum of the constituents of the hard jet, has to be close to the top-mass with $140 < m_{\mathrm{jet}} < 250$\gev.
  \item -- The invariant mass of each pair of the three subjets highest in \pt is calculated. The minimum of the pairwise masses $m_{\mathrm{min}}$ has to be $ > 50$\gev.
 \end{description}
 In Fig.~\ref{fig:boosted_top_cms_variables}, the distributions for jet mass and minimum pairwise mass are illustrated for a simulated $t\bar{t}$ (red) and a QCD multijet (black) sample at $\sqrt{s} = 8$\tev. 
- \item \textbf{HEP Top Tagger:} The HEP Top Tagger~\cite{Plehn:2010st} uses jets with a larger distance parameter than the CMS Top Tagger of $R = 1.5$. This makes the HEP top-tagging algorithm especially suited for top quark decays with moderate boost and thus, uses fat jets with a transverse momentum greater than 200\gev as input. Since a larger jet size is in principle more prone to disturbing effects from the underlying event or pile-up, a sophisticated decomposition procedure is applied to distinguish hard subjets from soft components. Similar to the decomposition done for the CMS tagger, the identification of subjets is based on going through the cluster history of the jet in reversed order. First, the jet is decomposed into subclusters applying a \textit{mass drop condition} discarding too soft components. Afterwards, subclusters resulting from the mass drop decomposition are reclustered into subjets and filtering criteria are applied. Details on the mass drop decomposition and reclustering criteria can be found in~\cite{CMS:2014fya}. Finally, the combination with the mass determined from the filtered subjets closest to the top mass is kept and reclustered to force three subjets. Kinematic selections are applied to these three final subjets in order to identify top quark decays. The following quantities are used based on the invariant mass of combinations of subjets:
+ \item \textbf{HEP Top Tagger:} The HEP Top Tagger~\cite{Plehn:2010st} uses jets with a larger distance parameter than the CMS Top Tagger of $R = 1.5$. This makes the HEP top-tagging algorithm especially suited for top quark decays with moderate boost and thus, uses fat jets with a transverse momentum greater than 200\gev as input. Since a larger jet size is in principle more prone to disturbing effects from the underlying event or pile-up, a sophisticated decomposition procedure is applied to distinguish hard subjets from soft components. Similar to the decomposition done for the CMS tagger, the identification of subjets is based on going through the cluster history of the jet in reversed order. First, the jet is decomposed into subclusters applying a \textit{mass drop condition} discarding too soft components. Afterwards, subclusters resulting from the mass drop decomposition are reclustered into subjets and filtering criteria are applied. Details on the mass drop decomposition and reclustering criteria can be found in~\cite{CMS-PAS-JME-13-007}. Finally, the combination with the mass determined from the filtered subjets closest to the top mass is kept and reclustered to force three subjets. Kinematic selections are applied to these three final subjets in order to identify top quark decays. The following quantities are used based on the invariant mass of combinations of subjets:
 \begin{figure}[!tp]
   \centering 
   \begin{tabular}{cc}
     \includegraphics[width=0.49\textwidth]{figures/Pheno2DPlot_HTT2D_NOheptoptag_NOmasscut_hists_Signal_Add.pdf} & 
     \includegraphics[width=0.49\textwidth]{figures/Pheno2DPlot_HTT2D_NOheptoptag_NOmasscut_hists_Background_Add.pdf}
   \end{tabular}
-  \caption{Two-dimensional distributons of $m_{\mathrm{23}}/m_{\mathrm{123}}$ versus $\mathrm{atan}(m_{\mathrm{13}}/m_{\mathrm{12}})$ for HEP Top Tagger subjets from CA15 jets with $\pt > 200$\gev for a simulated $t\bar{t}$ MADGRAPH sample (\textit{left}) and for a simulated background sample composed of cross-section weighted boson + jets, diboson, single-top, $t\bar{t}$ all-hadronic and $t\bar{t}$ leptonic events (\textit{right}). The A-shaped region indicates the selected region by the HEP Top Tagger. Taken from~\cite{CMS:2014fya}.}
+  \caption{Two-dimensional distributons of $m_{\mathrm{23}}/m_{\mathrm{123}}$ versus $\mathrm{atan}(m_{\mathrm{13}}/m_{\mathrm{12}})$ for HEP Top Tagger subjets from CA15 jets with $\pt > 200$\gev for a simulated $t\bar{t}$ MADGRAPH sample (\textit{left}) and for a simulated background sample composed of cross-section weighted boson + jets, diboson, single-top, $t\bar{t}$ all-hadronic and $t\bar{t}$ leptonic events (\textit{right}). The A-shaped region indicates the selected region by the HEP Top Tagger. Taken from~\cite{CMS-PAS-JME-13-007}.}
   \label{fig:boosted_top_hep_variables}
 \end{figure}
 \begin{description}
@@ -242,10 +242,10 @@ The performance of various taggers is compared by determining the top-tag effici
   \begin{tabular}{c}
     \includegraphics[width=0.9\textwidth]{figures/TopTag_ROC_Curves.pdf}  
   \end{tabular}
-  \caption{Mistag rate versus top-tagging efficiency as measured from QCD \textsc{Pythia6} and \powheg \ttbar simulated events, respectively. In the cases where a jet mass cut is applied, the cut is not varied but fixed at $140 < m_\mathrm{jet} < 250$\gev. N-subjettiness is calculated using $R = 0.8$ jets except when used in combination with the HEP Top Tagger in which case $R = 1.5$ jets are used. Signal jets are matched to simulated all-hadronic generated top quarks, while background jets are matched to simulated partons from the hard scatter. Distributions are shown for three \pt selections, where the \pt cut is applied to the matched generated parton~\cite{CMS:2014fya}.}
+  \caption{Mistag rate versus top-tagging efficiency as measured from QCD \textsc{Pythia6} and \powheg \ttbar simulated events, respectively. In the cases where a jet mass cut is applied, the cut is not varied but fixed at $140 < m_\mathrm{jet} < 250$\gev. N-subjettiness is calculated using $R = 0.8$ jets except when used in combination with the HEP Top Tagger in which case $R = 1.5$ jets are used. Signal jets are matched to simulated all-hadronic generated top quarks, while background jets are matched to simulated partons from the hard scatter. Distributions are shown for three \pt selections, where the \pt cut is applied to the matched generated parton~\cite{CMS-PAS-JME-13-007}.}
   \label{fig:boosted_top_roc}
 \end{figure}
-The top-tag efficiency determined from simulated $t\bar{t}$ events for the selection criteria described above amounts to 35.3\% for a matched parton-\pt of $> 200$\gev for the HEP Top Tagger (HEP WP0) and 38.3\% for a matched parton-\pt of $> 400$\gev for the CMS Top Tagger (CMS WP0) while the mistag rates as determined from simulated QCD multijet events are 2.6\% and 2.5\%, respectively. However, the tagging performance shows a moderate dependence on pile-up such that in high pile-up environments a performance degradation is expected. For instance, in the case of the CMS Top Tagger the efficiency stays rather stable as a function of the number of primary vertices with a slope of $0.031\% \pm 0.034\%$ while the mistag rate increases with a slope of $0.095\% \pm 0.006\%$ as a function of the number of primary vertices.      
+The top-tag efficiency determined from simulated $t\bar{t}$ events for the selection criteria described above amounts to 35.3\% for a matched parton-\pt of $> 200$\gev for the HEP Top Tagger (HEP WP0) and 38.3\% for a matched parton-\pt of $> 400$\gev for the CMS Top Tagger (CMS WP0) while the mistag rates as determined from simulated QCD multijet events are 2.6\% and 2.5\%, respectively. However, the tagging performance shows a moderate dependence on pile-up such that in high pile-up environments a performance degradation is expected. For instance, in the case of the CMS Top Tagger the efficiency stays rather stable as a function of the number of primary vertices with a slope of $0.031\% \pm 0.034\%$ while the mistag rate increases with a slope of $0.095\% \pm 0.006\%$ as a function of the number of primary vertices.       
 
 %\subsection{Subjet B-Tagging}
 %\label{sec:boosted_tops_subjet_b}
