--- a/RA2.tex
+++ b/RA2.tex
@@ -299,7 +299,7 @@ In order to do this, the prediction of the QCD background is performed in two su
   \begin{tabular}{c}
                 \includegraphics[width=0.99\textwidth]{figures/SketchJetSmearingMethod_LabelMHT.pdf}  
   \end{tabular}}
-  \caption{Outline of the two steps performed in the R+S method for estimation of QCD background events. Sketch provided by~\cite{MSchrode}.}
+  \caption{Outline of the two steps performed in the R+S method for estimation of QCD background events. Sketch from~\cite{thesis:Schroeder}.}
   \label{fig:RPlusS_concept}
 \end{figure}
 
