--- a/Theory.tex
+++ b/Theory.tex
@@ -3,7 +3,7 @@ Although the SM is a successful theory, there are also some open questions which
 After a short introduction to the phenomenology of the standard model, including a discussion of specific shortcomings, the basic concepts of supersymmetry are introduced in this chapter. In addition, general concepts of searches for supersymmetry at collider experiments are discussed together with a summary of the current status of the results of such searches which have been performed in the past.
 \section{The Standard Model of Particle Physics}
 \label{sec:sm}
-The SM comprises the elementary particles and their interactions~\cite{bib:PDG:2012}. In general, one distinguishes between two types of particles: fermions and bosons. While matter particles are fermions with half-integer spin, the fundamental forces are mediated via bosons, carrying integer spin. An overview of the contents of the SM is given in Fig.~\ref{fig:SM} where the particles are denoted together with their interactions\footnote{Gravity is not included in the standard model and thus it is not discussed in this thesis.}. 
+The SM comprises the elementary particles and their interactions~\cite{Agashe:2014kda}. In general, one distinguishes between two types of particles: fermions and bosons. While matter particles are fermions with half-integer spin, the fundamental forces are mediated via bosons, carrying integer spin. An overview of the contents of the SM is given in Fig.~\ref{fig:SM} where the particles are denoted together with their interactions\footnote{Gravity is not included in the standard model and thus it is not discussed in this thesis.}. 
 \begin{figure}[!tp]
   \centering 
   \begin{tabular}{c}
@@ -65,7 +65,7 @@ with the weak mixing angle $\theta_{W}$. This mixing angle relates also the elec
 \begin{equation}
 e = g \, \mathrm{sin} \, \theta_{W} \; .
 \end{equation}
-The fields $W^{\mu}$ couple only to left-handed fermions, such that the same holds also for $W^{\pm}$. Since however, the $B^{\mu}$ couples to left- and right-handed states, a coupling to left- and right-handed fermions takes place for $\gamma$ and $Z^0$ as well. Unlike the photon, the $W^{\pm}$ and $Z$ vector bosons are massive with masses\footnote{In this thesis, natural units are used, \ie $\hbar = c =1$. Thus, also particle masses and momenta have the dimension of energies.} of $\Wpm = 80.385 \pm 0.015$\gev and $\Z = 91.1876 \pm 0.0021$\gev~\cite{bib:PDG:2012}. As a result, the weak interaction is suppressed with respect to the electromagnetic force. 
+The fields $W^{\mu}$ couple only to left-handed fermions, such that the same holds also for $W^{\pm}$. Since however, the $B^{\mu}$ couples to left- and right-handed states, a coupling to left- and right-handed fermions takes place for $\gamma$ and $Z^0$ as well. Unlike the photon, the $W^{\pm}$ and $Z$ vector bosons are massive with masses\footnote{In this thesis, natural units are used, \ie $\hbar = c =1$. Thus, also particle masses and momenta have the dimension of energies.} of $\Wpm = 80.385 \pm 0.015$\gev and $\Z = 91.1876 \pm 0.0021$\gev~\cite{Agashe:2014kda}. As a result, the weak interaction is suppressed with respect to the electromagnetic force. 
 \item \textbf{Higgs Boson:} The electroweak theory in the current representation requires that fermions and bosons are massless particles as mass terms violate the gauge invariance under $SU(2)_{L} \otimes U(1)_{Y}$ transformations. This is in contradiction to experimental observations which have shown that all particles, except for photon and gluon, in fact do have mass. \\
 An explanation for the generation of particle masses without violation of the principles of the electroweak theory is provided by the \textit{Higgs-mechanism}~\cite{PhysRevLett.13.508, PhysRevLett.13.321, PhysRevLett.13.585} which is based on the concept of spontaneous symmetry breaking. The main idea behind this meachnism is that while in general the principle of local gauge invariance is obeyed, it is explicitly broken by the ground state. \\
 In the context of the Higgs-mechanism, this is realized by the introduction of the Higgs field $\Phi$ described by a potential 
