--- a/Thesis.bib
+++ b/Thesis.bib
@@ -491,8 +491,7 @@ $\bar{p}p$ collisions}",
       key            = "1286320",
       title          = "{First combination of Tevatron and LHC measurements of
                         the top-quark mass}",
-      collaboration  = "ATLAS Collaboration, CDF Collaboration, CMS
-                        Collaboration, D0 Collaboration",
+      collaboration  = "ATLAS, CDF, CMS and D0",
       year           = "2014",
       eprint         = "1403.4427",
       archivePrefix  = "arXiv",
@@ -602,7 +601,7 @@ $\bar{p}p$ collisions}",
       title          = "{Observation of a new particle in the search for the
                         Standard Model Higgs boson with the ATLAS detector at the
                         LHC}",
-      collaboration  = "ATLAS Collaboration",
+      collaboration  = "ATLAS",
       journal        = "Phys.Lett.",
       volume         = "B716",
       pages          = "1-29",
@@ -619,7 +618,7 @@ $\bar{p}p$ collisions}",
       author         = "Chatrchyan, Serguei and others",
       title          = "{Observation of a new boson at a mass of 125 GeV with the
                         CMS experiment at the LHC}",
-      collaboration  = "CMS Collaboration",
+      collaboration  = "CMS",
       journal        = "Phys.Lett.",
       volume         = "B716",
       pages          = "30-61",
@@ -636,7 +635,7 @@ $\bar{p}p$ collisions}",
       author         = "Aad, Georges and others",
       title          = "{Measurements of Higgs boson production and couplings in
                         diboson final states with the ATLAS detector at the LHC}",
-      collaboration  = "ATLAS Collaboration",
+      collaboration  = "ATLAS",
       journal        = "Phys.Lett.",
       volume         = "B726",
       pages          = "88-119",
@@ -654,7 +653,7 @@ $\bar{p}p$ collisions}",
       title          = "{Measurements of Higgs boson production and couplings in
                         the four-lepton channel in pp collisions at center-of-mass
                         energies of 7 and 8 TeV with the ATLAS detector}",
-      collaboration  = " ATLAS Collaboration",
+      collaboration  = "ATLAS",
       year           = "2014",
       eprint         = "1408.5191",
       archivePrefix  = "arXiv",
@@ -668,7 +667,7 @@ $\bar{p}p$ collisions}",
       title          = "{Measurement of Higgs boson production in the diphoton
                         decay channel in $pp$ collisions at center-of-mass
                         energies of 7 and 8 TeV with the ATLAS detector}",
-      collaboration  = " ATLAS Collaboration",
+      collaboration  = "ATLAS",
       year           = "2014",
       eprint         = "1408.7084",
       archivePrefix  = "arXiv",
@@ -677,15 +676,14 @@ $\bar{p}p$ collisions}",
       SLACcitation   = "%%CITATION = ARXIV:1408.7084;%%",
 }
 
-@techreport{CMS-PAS-HIG-14-009,
-      title         = "{Precise determination of the mass of the Higgs boson and
-                       studies of the compatibility of its couplings with the
-                       standard model}",
-      institution   = "CERN",
-      collaboration = "CMS Collaboration",
-      address       = "Geneva",
-      number        = "CMS-PAS-HIG-14-009",
-      year          = "2014",
+@article{CMS-PAS-HIG-14-009,
+  collaboration = {CMS},
+  title         = {Precise determination of the mass of the Higgs boson and
+                  studies of the compatibility of its couplings with the
+                  standard model},
+  JOURNAL      = "CMS Physics Analysis Summary",
+  volume       = "\href{http://cdsweb.cern.ch/record/1728249}{CMS-PAS-HIG-14-009}",
+  YEAR         = "2014"
 }
 
 @Article{bib:Hambye:1996wb,
@@ -740,10 +738,9 @@ to 10\fbinv of Data",
      note      = {CDF Note 10806. D\O{} Note 6303. \href{}{FERMILAB-CONF-12-065-E}},
       reportNumber   = "FERMILAB-CONF-12-065-E"
 }
-
-@book{bib:CPViolation,
-  Author = {},
-  Editor = {Michael Beyer},
+ 
+@Book{bib:CPViolation,
+  Author = {Michael Beyer},  
   Title = {CP Violation in Particle, Nuclear, and Astrophysics},
   Series = {Lecture Notes in Physics},
   Publisher = {Springer},
@@ -879,7 +876,7 @@ to 10\fbinv of Data",
 
 @Article{Aliev:2010zk,
      author    = "Aliev, M. and others",
-     title     = "{-- HATHOR -- HAdronic Top and Heavy quarks crOss section calculatoR}",
+     title     = "{HATHOR -- HAdronic Top and Heavy quarks crOss section calculatoR}",
      journal   = "Comput. Phys. Commun.",
      volume    = "182",
      year      = "2011",
@@ -937,7 +934,7 @@ to 10\fbinv of Data",
 }
 
 @ARTICLE{wmap,
-   author = {{Bennett}, C.~L., et.al.},
+   author = {Bennett, C. L. and others},
    title = "{Nine-year Wilkinson Microwave Anisotropy Probe (WMAP) Observations: Final Maps and Results}",
    journal = "Astrophysical Journal Supplement Series",
    eprint        = "1212.5226",
@@ -950,7 +947,7 @@ to 10\fbinv of Data",
 @article{Ade:2013zuv,
       author         = "Ade, P.A.R. and others",
       title          = "{Planck 2013 results. XVI. Cosmological parameters}",
-      collaboration  = "Planck Collaboration",
+      collaboration  = "Planck",
       journal        = "Astron.Astrophys.",
       doi            = "10.1051/0004-6361/201321591",
       year           = "2014",
@@ -1202,7 +1199,7 @@ author = {G. 't~Hooft}
 @article{PhysRevD.90.072005,    
   title = {Search for proton decay via $p \rightarrow \nu {K}^{+}$ using $260 \mathrm{kiloton} \cdot \mathrm{year}$ data of Super-Kamiokande},
   author = {Abe, K. and Hayato, Y. and Iyogi, K. and Kameda, J. and Miura, M. and Moriyama, S. and Nakahata, M. and Nakayama, S. and Wendell, R. A. and Sekiya, H. and Shiozawa, M. and Suzuki, Y. and Takeda, A. and Takenaga, Y. and Ueno, K. and Yokozawa, T. and Kaji, H. and Kajita, T. and Kaneyuki, K. and Lee, K. P. and Okumura, K. and McLachlan, T. and Labarga, L. and Kearns, E. and Raaf, J. L. and Stone, J. L. and Sulak, L. R. and Goldhaber, M. and Bays, K. and Carminati, G. and Kropp, W. R. and Mine, S. and Renshaw, A. and Smy, M. B. and Sobel, H. W. and Ganezer, K. S. and Hill, J. and Keig, W. E. and Jang, J. S. and Kim, J. Y. and Lim, I. T. and Albert, J. B. and Scholberg, K. and Walter, C. W. and Wongjirad, T. and Ishizuka, T. and Tasaka, S. and Learned, J. G. and Matsuno, S. and Smith, S. N. and Hasegawa, T. and Ishida, T. and Ishii, T. and Kobayashi, T. and Nakadaira, T. and Nakamura, K. and Nishikawa, K. and Oyama, Y. and Sakashita, K. and Sekiguchi, T. and Tsukamoto, T. and Suzuki, A. T. and Takeuchi, Y. and Ieki, K. and Ikeda, M. and Kubo, H. and Minamino, A. and Murakami, A. and Nakaya, T. and Fukuda, Y. and Choi, K. and Itow, Y. and Mitsuka, G. and Miyake, M. and Mijakowski, P. and Hignight, J. and Imber, J. and Jung, C. K. and Taylor, I. and Yanagisawa, C. and Ishino, H. and Kibayashi, A. and Koshio, Y. and Mori, T. and Sakuda, M. and Takeuchi, J. and Kuno, Y. and Kim, S. B. and Okazawa, H. and Choi, Y. and Nishijima, K. and Koshiba, M. and Totsuka, Y. and Yokoyama, M. and Martens, K. and Marti, Ll. and Obayashi, Y. and Vagins, M. R. and Chen, S. and Sui, H. and Yang, Z. and Zhang, H. and Connolly, K. and Dziomba, M. and Wilkes, R. J.},
-  collaboration = {(Super-Kamiokande Collaboration)},
+  collaboration = {Super-Kamiokande},
   journal = {Phys. Rev. D},
   volume = {90},
   issue = {7},
@@ -1566,7 +1563,7 @@ URL = {http://www.annualreviews.org/doi/abs/10.1146/annurev-astro-082708-101659}
       author         = "Aaltonen, T. and others",
       title          = "{Inclusive Search for Squark and Gluino Production in
                         $p\bar{p}$ Collisions at $\sqrt{s}$ = 1.96-TeV}",
-      collaboration  = "CDF Collaboration",
+      collaboration  = "CDF",
       journal        = "Phys.Rev.Lett.",
       volume         = "102",
       pages          = "121801",
@@ -1593,7 +1590,7 @@ URL = {http://www.annualreviews.org/doi/abs/10.1146/annurev-astro-082708-101659}
 @article{deJong:2012zt,
       author         = "de Jong, Paul",
       title          = "{Supersymmetry searches at the LHC}",
-      collaboration  = "ATLAS Collaborations, CMS Collaborations",
+      collaboration  = "ATLAS and CMS",
       pages          = "241-254",
       year           = "2012",
       eprint         = "1211.3887",
@@ -1714,7 +1711,7 @@ URL = {http://www.annualreviews.org/doi/abs/10.1146/annurev-astro-082708-101659}
       author         = "Breitweg, J. and others",
       title          = "{Search for selectron and squark production in $e^{+} p$
                         collisions at HERA}",
-      collaboration  = "ZEUS Collaboration",
+      collaboration  = "ZEUS",
       journal        = "Phys.Lett.",
       volume         = "B434",
       pages          = "214-230",
@@ -1771,11 +1768,10 @@ SLACcitation = "%%CITATION = ARXIV:1302.3415;%%",
       SLACcitation   = "%%CITATION = ARXIV:1306.4644;%%",
 }
 
-@article{Baak:2014ora,
+@article{Baak:2014ora,  
       author         = "Baak, M. and others",
       title          = "{The global electroweak fit at NNLO and prospects for the
                         LHC and ILC}",
-      collaboration  = "Gfitter Group",
       journal        = "Eur.Phys.J.",
       volume         = "C74",
       pages          = "3046",
@@ -1792,7 +1788,7 @@ SLACcitation = "%%CITATION = ARXIV:1302.3415;%%",
       author         = "Chatrchyan, Serguei and others",
       title          = "{Measurement of the B(s) to mu+ mu- branching fraction
                         and search for B0 to mu+ mu- with the CMS Experiment}",
-      collaboration  = "CMS Collaboration",
+      collaboration  = "CMS",
       journal        = "Phys.Rev.Lett.",
       volume         = "111",
       pages          = "101804",
@@ -1810,7 +1806,7 @@ SLACcitation = "%%CITATION = ARXIV:1302.3415;%%",
       title          = "{Measurement of the $B^0_s \to \mu^+ \mu^-$ branching
                         fraction and search for $B^0 \to \mu^+ \mu^-$ decays at
                         the LHCb experiment}",
-      collaboration  = "LHCb collaboration",
+      collaboration  = "LHCb",
       journal        = "Phys.Rev.Lett.",
       volume         = "111",
       pages          = "101805",
@@ -1827,7 +1823,7 @@ SLACcitation = "%%CITATION = ARXIV:1302.3415;%%",
       title         = "{Combination of results on the rare decays $B^0_{(s)} \to
                        \mu^+\mu^-$ from the CMS and LHCb experiments}",
       institution   = "CERN",
-      collaboration = "CMS and LHCb Collaborations",
+      collaboration = "CMS and LHCb",
       address       = "Geneva",
       number        = "CMS-PAS-BPH-13-007. CERN-LHCb-CONF-2013-012",
       month         = "Jun",
@@ -2000,7 +1996,7 @@ author = "John Ellis and J.S. Hagelin and D.V. Nanopoulos and K. Olive and M. Sr
       author         = "Aprile, E. and others",
       title          = "{Dark Matter Results from 100 Live Days of XENON100
                         Data}",
-      collaboration  = "XENON100 Collaboration",
+      collaboration  = "XENON100",
       journal        = "Phys.Rev.Lett.",
       volume         = "107",
       pages          = "131302",
@@ -2016,7 +2012,7 @@ author = "John Ellis and J.S. Hagelin and D.V. Nanopoulos and K. Olive and M. Sr
       author         = "Chatrchyan, Serguei and others",
       title          = "{Interpretation of Searches for Supersymmetry with
                         simplified Models}",
-      collaboration  = "CMS Collaboration",
+      collaboration  = "CMS",
       journal        = "Phys.Rev.",
       number         = "5",
       volume         = "D88",
@@ -2057,8 +2053,7 @@ author = "John Ellis and J.S. Hagelin and D.V. Nanopoulos and K. Olive and M. Sr
 
 @article{Reya:1984yz,
       author         = "Reya, E. and Roy, D.P.",
-      title          = "{SUPERSYMMETRIC PARTICLE PRODUCTION AT p anti-p COLLIDER
-                        ENERGIES}",
+      title          = "{Supersymmetric-particle production at p anti-p collider energies}",
       journal        = "Phys.Rev.",
       volume         = "D32",
       pages          = "645",
@@ -2113,7 +2108,7 @@ author = "John Ellis and J.S. Hagelin and D.V. Nanopoulos and K. Olive and M. Sr
       author         = "Borschensky, Christoph and Krämer, Michael and Kulesza,
                         Anna and Mangano, Michelangelo and Padhi, Sanjay and
                         others",
-      title          = "{Squark and gluino production cross sections in pp
+      title          = "{Squark and gluino production cross sections in \pp
                         collisions at $\sqrt{s}$ = 13, 14, 33 and 100 TeV}",
       year           = "2014",
       eprint         = "1407.5066",
@@ -2176,18 +2171,17 @@ author = "John Ellis and J.S. Hagelin and D.V. Nanopoulos and K. Olive and M. Sr
       SLACcitation   = "%%CITATION = HEP-PH/0503173;%%",
 }
 
-@techreport{CMS-PAS-SUS-12-030,
-      title         = "{Phenomenological MSSM interpretation of the CMS 2011
-                       5fb-1 results}",
-      institution   = "CERN",
-      collaboration = "CMS Collaboration",
-      address       = "Geneva",
-      number        = "CMS-PAS-SUS-12-030",
-      year          = "2013",
+@article{CMS-PAS-SUS-12-030,
+  collaboration = {CMS},
+  title         = {Phenomenological MSSM interpretation of the CMS 2011
+                  5fb-1 results},
+  JOURNAL      = "CMS Physics Analysis Summary",
+  volume       = "\href{http://cdsweb.cern.ch/record/1552402}{CMS-PAS-SUS-12-030}",
+  YEAR         = "2013"
 }
 
 @article{veltman1981infrared,
-  title={THE INFRARED - ULTRAVIOLET CONNECTION},
+  title={The infrared - ultraviolet connection},
   author={Veltman, Martinus JG},
   journal={Acta Phys. Polon. B},
   volume={12},
@@ -2622,7 +2616,9 @@ primaryClass   = "hep-ph"
 }
 
 @misc{DRathjens,
-  note = "D.~Rathjens, private communication",
+  author = "D.~Rathjens",
+  title = "PhD thesis in preparation",
+  note = "University of Hamburg",
   year = {2014}
 }
 
@@ -2654,10 +2650,10 @@ primaryClass   = "hep-ph"
 
 @techreport{CMS-PAS-TOP-14-001,
       title         = "{Measurement of the top-quark mass in t t-bar events with
-                       lepton+jets final states in pp collisions at sqrt(s)=8
+                       lepton+jets final states in $pp$ collisions at sqrt(s)=8
                        TeV}",
       institution   = "CERN",
-      collaboration = "CMS Collaboration",
+      collaboration = "CMS",
       address       = "Geneva",
       number        = "CMS-PAS-TOP-14-001",
       year          = "2014",
@@ -2667,7 +2663,7 @@ primaryClass   = "hep-ph"
       author         = "Abazov, Victor Mukhamedovich and others",
       title          = "{Precision measurement of the top-quark mass in
                         lepton+jets final states}",
-      collaboration  = "D0 Collaboration",
+      collaboration  = "D0",
       journal        = "Phys.Rev.Lett.",
       volume         = "113",
       pages          = "032002",
@@ -2788,9 +2784,11 @@ url = "http://www.sciencedirect.com/science/article/pii/S0370269311008719",
       SLACcitation   = "%%CITATION = ARXIV:1012.0799;%%",
 }
 
-@misc{bib:stirling:pcom,
-  note = "W.J.~Stirling, private communication",
-  year          = {2012}
+@misc{bib:stirling:pcom,       
+  author = "W.J.~Stirling",
+  title = "Parton luminosity and cross section plots",
+  note = "\url{http://www.hep.ph.ic.ac.uk/~wstirlin/plots/plots.html}",
+  year = {Nov. 2014}
 }
 
 @inproceedings{Huth:217490,
@@ -3063,15 +3061,14 @@ author = "S. Brandt and Ch. Peyrou and R. Sosnowski and A. Wroblewski"
 }
 
 @article{Cacciari2008119,
-title = "Pileup subtraction using jet areas ",
-journal = "Physics Letters B ",
+title = "Pileup subtraction using jet areas",
+journal = "Physics Letters B",
 volume = "659",
 number = "1-2",
 pages = "119 - 126",
 year = "2008",
-note = "",
 issn = "0370-2693",
-doi = "http://dx.doi.org/10.1016/j.physletb.2007.09.077",
+doi = "10.1016/j.physletb.2007.09.077",
 url = "http://www.sciencedirect.com/science/article/pii/S0370269307011094",
 author = "Matteo Cacciari and Gavin P. Salam"
 }
@@ -3094,7 +3091,7 @@ author = "Matteo Cacciari and Gavin P. Salam"
 @article{Khachatryan:2011dx,
       author         = "Khachatryan, Vardan and others",
       title          = "{First Measurement of Hadronic Event Shapes in $pp$ Collisions at \mbox{$\sqrt{s} = 7\tev$}}",
-      collaboration  = "CMS Collaboration",
+      collaboration  = "CMS",
       journal        = "Phys.Lett.",
       volume         = "B699",
       pages          = "48-67",
@@ -3188,21 +3185,24 @@ author = "Matteo Cacciari and Gavin P. Salam"
       SLACcitation   = "%%CITATION = ARXIV:1104.3547;%%",
 }
 
-@article{CMS-DP-2012-012,
+@techreport{CMS-DP-2012-012,
+      collaboration = "CMS",
       title         = "{Jet Energy Corrections and Uncertainties. Detector
-                       Performance Plots for 2012.}",
-      collaboration = "CMS Collaboration",
-      volume        = "CMS-DP-2012-012",
+                       Performance Plots for 2012}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "CMS-DP-2012-012",
       month         = "Jul",
       year          = "2012",
 }
 
-@article{CMS-DP-2013-033,
-      title         = "{8 TeV Jet Energy Corrections and
-Uncertainties based on
+@techreport{CMS-DP-2013-033,
+      collaboration = "CMS",
+      title         = "{8 TeV Jet Energy Corrections and Uncertainties based on
                        19.8 fb$^{-1}$ of data in CMS}",
-      collaboration = "CMS Collaboration",
-      volume        = "CMS-DP-2013-033",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "CMS-DP-2013-033",
       month         = "Oct",
       year          = "2013",
 }
@@ -3220,21 +3220,27 @@ Uncertainties based on
       author  = "{F. Pandolfi, D. del Re, M. Voutilainen}",
       title       = "Jet Response and Resolution Measurement with Photon+Jet Events at $\sqrt{s}=7$ TeV",
       year        = "2010",
-      JOURNAL     = "CMS AN-2010/141"
+      volume      = "CMS-AN-10-141",
+      JOURNAL     = "CMS Analysis Note",
+      note        = "Internal documentation"
 }
 
 @Article{CMS-AN-2011-004,
       author  = "{F. Pandolfi, D. del Re, M. Voutilainen}",
       title       = "Update on Jet Response and Resolution Measurements with Photon+Jet Events at $\sqrt{s}=7$ TeV",
       year        = "2011",
-      JOURNAL     = "CMS AN-2011/004"
+      volume      = "CMS-AN-11-004",
+      JOURNAL     = "CMS Analysis Note",
+      note        = "Internal documentation"
 }
 
 @Article{CMS-AN-2013-179,
       author = "T. Lenz and C. Sander and P. Schleper and M. Schroder and H. Stadie",
       title = "Jet Energy Resolution Measurement using Photon+Jet Events at $\sqrt{s}=8$~TeV",
       year = "2013",
-      journal = "CMS AN-2013/179" 
+      volume  = "CMS-AN-13-179",
+      journal = "CMS Analysis Note",
+      note    = "Internal documentation"
 }
 
 @article{oai:arXiv.org:hep-ex/0012046,
@@ -3310,7 +3316,7 @@ Uncertainties based on
       author         = "Khachatryan, Vardan and others",
       title          = "{Measurement of $B\bar{B}$ Angular Correlations based on
                         Secondary Vertex Reconstruction at $\sqrt{s}=7$ TeV}",
-      collaboration  = "CMS Collaboration",
+      collaboration  = "CMS",
       journal        = "JHEP",
       volume         = "1103",
       pages          = "136",
@@ -3347,7 +3353,7 @@ Uncertainties based on
       title          = "{Search for new physics in the multijet and missing
                         transverse momentum final state in proton-proton
                         collisions at $\sqrt{s} = 7$ TeV}",
-      collaboration  = "CMS Collaboration",
+      collaboration  = "CMS",
       journal        = "Phys.Rev.Lett.",
       volume         = "109",
       pages          = "171803",
@@ -3366,7 +3372,7 @@ Uncertainties based on
                         missing transverse energy using the variables $\alpha_T$
                         and b-quark multiplicity in pp collisions at $\sqrt s=8$
                         TeV}",
-      collaboration  = "CMS Collaboration",
+      collaboration  = "CMS",
       journal        = "Eur.Phys.J.",
       volume         = "C73",
       pages          = "2568",
@@ -3382,9 +3388,9 @@ Uncertainties based on
 @article{Chatrchyan:2013wxa,
       author         = "Chatrchyan, Serguei and others",
       title          = "{Search for gluino mediated bottom- and top-squark
-                        production in multijet final states in pp collisions at 8
+                        production in multijet final states in $pp$ collisions at 8
                         TeV}",
-      collaboration  = "CMS Collaboration",
+      collaboration  = "CMS",
       journal        = "Phys.Lett.",
       volume         = "B725",
       pages          = "243-270",
@@ -3397,25 +3403,23 @@ Uncertainties based on
       SLACcitation   = "%%CITATION = ARXIV:1305.2390;%%",
 }
 
-@techreport{CMS-PAS-SUS-13-019,
-      title         = "{Search for supersymmetry in hadronic final states using
-                       MT2 with the CMS detector at sqrt(s) = 8 TeV}",
-      institution   = "CERN",
-      collaboration = "CMS Collaboration",
-      address       = "Geneva",
-      number        = "CMS-PAS-SUS-13-019",
-      year          = "2014",
+@article{CMS-PAS-SUS-13-019,
+  collaboration = {CMS},
+  title         = {Search for supersymmetry in hadronic final states using
+                  MT2 with the CMS detector at sqrt(s) = 8 TeV},
+  JOURNAL      = "CMS Physics Analysis Summary",
+  volume       = "\href{http://cdsweb.cern.ch/record/1646394}{CMS-PAS-SUS-13-019}",
+  YEAR         = "2014"
 }
 
-@techreport{CMS-PAS-SUS-14-011,
-      title         = "{Exclusion limits on gluino and top-squark pair production
-                       in natural SUSY scenarios with inclusive razor and
-                       exclusive single-lepton searches at 8 TeV.}",
-      institution   = "CERN",
-      collaboration = "CMS Collaboration",
-      address       = "Geneva",
-      number        = "CMS-PAS-SUS-14-011",
-      year          = "2014",
+@article{CMS-PAS-SUS-14-011,
+  collaboration = {CMS},
+  title         = {Exclusion limits on gluino and top-squark pair production
+                   in natural SUSY scenarios with inclusive razor and
+                   exclusive single-lepton searches at 8 TeV},
+  JOURNAL      = "CMS Physics Analysis Summary",
+  volume       = "\href{http://cdsweb.cern.ch/record/1745586}{CMS-PAS-SUS-14-011}",
+  YEAR         = "2014"
 }
 
 @article{CMS-PAS-SUS-11-004,
@@ -3455,10 +3459,9 @@ Uncertainties based on
 
 @article{bib:CMS:PhysicsResultsSUS,
   collaboration = {CMS},
-  title         = {CMS Supersymmetry Physics Results},
+  title         = {CMS Supersymmetry Physics Results}, 
   journal       = {Public CMS Wiki},
-  note          = {https://twiki.cern.ch/twiki/bin/view/CMSPublic/PhysicsResultsSUS, Topic revision: r279},
-  url           = {https://twiki.cern.ch/twiki/bin/view/CMSPublic/PhysicsResultsSUS},
+  note          = {\url{https://twiki.cern.ch/twiki/bin/view/CMSPublic/PhysicsResultsSUS}, Topic revision: r279},
   year          = {2014}
 }
 
@@ -3468,7 +3471,7 @@ Uncertainties based on
                         multiplicities and missing transverse momentum at
                         sqrt(s)=8 TeV proton-proton collisions using the ATLAS
                         experiment}",
-      collaboration  = "ATLAS Collaboration",
+      collaboration  = "ATLAS",
       journal        = "JHEP",
       volume         = "1310",
       pages          = "130",
@@ -3487,7 +3490,7 @@ Uncertainties based on
                         in final states with missing transverse momentum and at
                         least three $b$-jets at $\sqrt{s} =$ 8 TeV proton-proton
                         collisions with the ATLAS detector}",
-      collaboration  = "ATLAS Collaboration",
+      collaboration  = "ATLAS",
       journal        = "JHEP",
       volume         = "1410",
       pages          = "24",
@@ -3505,7 +3508,7 @@ Uncertainties based on
       title          = "{Search for squarks and gluinos with the ATLAS detector
                         in final states with jets and missing transverse momentum
                         using $\sqrt{s}=8$ TeV proton--proton collision data}",
-      collaboration  = "ATLAS Collaboration",
+      collaboration  = "ATLAS",
       journal        = "JHEP",
       volume         = "1409",
       pages          = "176",
@@ -3763,7 +3766,7 @@ Uncertainties based on
       SLACcitation   = "%%CITATION = ARXIV:0809.3264;%%",
 }
 
-@unpublished{Botje:2011sn,
+@article{Botje:2011sn,
       author         = "Michiel Botje and Jon Butterworth and Amanda Cooper-Sarkar and Albert de Roeck and Joel Feltesse and Stefano Forte and Alexander Glazov and Joey Huston and Ronan McNulty and Torbj{\"o}rn Sj{\"o}strand and Robert Thorne",
       title          = "{The PDF4LHC Working Group Interim Recommendations}",
       year           = "2011",
@@ -3853,7 +3856,7 @@ Uncertainties based on
       title          = "{Search for new physics in the multijet and missing
                         transverse momentum final state in proton-proton
                         collisions at $\sqrt{s}$= 8 TeV}",
-      collaboration  = "CMS Collaboration",
+      collaboration  = "CMS",
       journal        = "JHEP",
       volume         = "1406",
       pages          = "055",
@@ -3867,7 +3870,7 @@ Uncertainties based on
 }
 
 @article{bib:AN-12-350,
- author = {Autermann, Christian and other},
+ author = {Autermann, Christian and others},
  title = {Search for new physics in multijets and missing momentum final state at 8\tev},
  journal       = {CMS Analysis Note},
  volume        = {CMS-AN-12-350},
@@ -3919,8 +3922,8 @@ Uncertainties based on
       author         = "Chatrchyan, Serguei and others",
       title          = "{Search for supersymmetry in final states with missing
                         transverse energy and 0, 1, 2, or at least 3 b-quark jets
-                        in 7 TeV pp collisions using the variable alphaT}",
-      collaboration  = "CMS Collaboration",
+                        in 7 TeV $pp$ collisions using the variable alphaT}",
+      collaboration  = "CMS",
       journal        = "JHEP",
       volume         = "1301",
       pages          = "077",
@@ -3937,7 +3940,7 @@ Uncertainties based on
       author         = "Chatrchyan, Serguei and others",
       title          = "{Search for supersymmetry in hadronic final states using
                         MT2 in $pp$ collisions at $\sqrt{s} = 7$ TeV}",
-      collaboration  = "CMS Collaboration",
+      collaboration  = "CMS",
       journal        = "JHEP",
       volume         = "1210",
       pages          = "018",
@@ -3954,7 +3957,7 @@ Uncertainties based on
       author         = "Chatrchyan, Serguei and others",
       title          = "{Inclusive search for supersymmetry using the razor
                         variables in $pp$ collisions at $\sqrt{s}=7$ TeV}",
-      collaboration  = "CMS Collaboration",
+      collaboration  = "CMS",
       journal        = "Phys.Rev.Lett.",
       number         = "8",
       volume         = "111",
@@ -3972,7 +3975,7 @@ Uncertainties based on
       author         = "Chatrchyan, Serguei and others",
       title          = "{Search for supersymmetry with razor variables in pp
                         collisions at $\sqrt{s}$=7 TeV}",
-      collaboration  = "CMS Collaboration",
+      collaboration  = "CMS",
       year           = "2014",
       eprint         = "1405.3961",
       archivePrefix  = "arXiv",
@@ -4077,7 +4080,7 @@ Uncertainties based on
 @article{Chatrchyan:2008zzk,
  collaboration = {CMS},
       title          = "{The CMS experiment at the CERN LHC}",
-      collaboration  = "CMS Collaboration",
+      collaboration  = "CMS",
       journal        = "JINST",
       volume         = "3",
       pages          = "S08004",
@@ -4105,7 +4108,7 @@ Uncertainties based on
       author         = "Chatrchyan, S and others",
       title          = "{Performance of the CMS Hadron Calorimeter with Cosmic
                         Ray Muons and LHC Beam Data}",
-      collaboration  = "CMS Collaboration",
+      collaboration  = "CMS",
       journal        = "JINST",
       volume         = "5",
       pages          = "T03012",
@@ -4397,14 +4400,13 @@ Uncertainties based on
      year          = {2012},
 }
 
-@techreport{CMS-PAS-LUM-13-001,
-      title         = "{CMS Luminosity Based on Pixel Cluster Counting - Summer
-                       2013 Update}",
-      institution   = "CERN",
-      collaboration = "CMS Collaboration",
-      address       = "Geneva",
-      number        = "CMS-PAS-LUM-13-001",
-      year          = "2013",
+@article{CMS-PAS-LUM-13-001,
+  collaboration = {CMS},
+  title         = {CMS Luminosity Based on Pixel Cluster Counting - Summer
+                   2013 Update},
+  JOURNAL      = "CMS Physics Analysis Summary",
+  volume       = "\href{http://cdsweb.cern.ch/record/1598864}{CMS-PAS-LUM-13-001}",
+  YEAR         = "2013"
 }
 
 @ARTICLE{CMS-PAS-PFT-09-001,
@@ -4437,7 +4439,7 @@ Uncertainties based on
 @article{Chatrchyan:2012jua,
       author         = "Chatrchyan, Serguei and others",
       title          = "{Identification of b-quark jets with the CMS experiment}",
-      collaboration  = "CMS Collaboration",
+      collaboration  = "CMS",
       journal        = "JINST",
       volume         = "8",
       pages          = "P04013",
@@ -4450,29 +4452,29 @@ Uncertainties based on
       SLACcitation   = "%%CITATION = ARXIV:1211.4462;%%",
 }
 
-@techreport{CMS-PAS-BTV-13-001,
-      title         = "{Performance of b tagging at sqrt(s)=8 TeV in multijet,
-                       ttbar and boosted topology events}",
-      institution   = "CERN",
-      collaboration = "CMS Collaboration",
-      address       = "Geneva",
-      number        = "CMS-PAS-BTV-13-001",
-      year          = "2013",
+@article{CMS-PAS-BTV-13-001,
+  collaboration = {CMS},
+  title         = {Performance of b tagging at sqrt(s)=8 TeV in multijet,
+                  ttbar and boosted topology events},
+  JOURNAL      = "CMS Physics Analysis Summary",
+  volume       = "\href{http://cdsweb.cern.ch/record/1581306}{CMS-PAS-BTV-13-001}",
+  YEAR         = "2013"
 }
 
-@article{CMS:2014fya,
-      author         = "CMS Collaboration",
-      title          = "{Boosted Top Jet Tagging at CMS}",
-      collaboration  = "CMS Collaboration",
-      year           = "2014",
-      reportNumber   = "CMS-PAS-JME-13-007",
-      SLACcitation   = "%%CITATION = CMS-PAS-JME-13-007 ETC.;%%",
+@article{CMS-PAS-JME-13-007,
+  collaboration = {CMS},
+  title         = {Boosted Top Jet Tagging at CMS},
+  JOURNAL      = "CMS Physics Analysis Summary",
+  volume       = "\href{http://cdsweb.cern.ch/record/1647419}{CMS-PAS-JME-13-007}",
+  YEAR         = "2014"
 }
 
-@article{CMS-DP-2014-036,
+@techreport{CMS-DP-2014-036,  
       title         = "{Boosted Top Jet Tagging at CMS}",
-      collaboration = "CMS Collaboration",
-      volume        = "CMS-DP-2014-036",
+      institution   = "CERN",
+      collaboration = "CMS",
+      address       = "Geneva",
+      number        = "CMS-DP-2014-036",
       year          = "2014",
 }
 
@@ -4534,15 +4536,13 @@ Uncertainties based on
       SLACcitation   = "%%CITATION = ARXIV:0912.1342;%%",
 }
 
-@techreport{CMS-PAS-JME-09-001,
-      title         = "{A Cambridge-Aachen (C-A) based Jet Algorithm for boosted
-                       top-jet tagging}",
-      institution   = "CERN",
-      collaboration = "CMS Collaboration",
-      address       = "2009. Geneva",
-      number        = "CMS-PAS-JME-09-001",
-      month         = "Jul",
-      year          = "2009",
+@article{CMS-PAS-JME-09-001,
+  collaboration = {CMS},
+  title         = {A Cambridge-Aachen (C-A) based Jet Algorithm for boosted
+                   top-jet tagging},
+  JOURNAL      = "CMS Physics Analysis Summary",
+  volume       = "\href{http://cdsweb.cern.ch/record/1194489}{CMS-PAS-JME-09-001}",
+  YEAR         = "2009"
 }
 
 @article{Kaplan:2008ie,
@@ -4849,10 +4849,10 @@ author = {R.L. Gl\"uckstern}
 
 @misc{CMS-JME-13-004,
       collaboration = {CMS},
-      title         = "Jet energy calibration in the 8 TeV pp data",
+      title         = "Jet energy calibration in the 8 TeV $pp$ data",
       journal       = "CMS Physics Analysis Summary",
       volume        = "CMS-PAS-JME-13-004",
-      note          = "in preparation",
+      note          = "Paper in preparation",
       year          = "2014",
 }
 
@@ -5211,7 +5211,7 @@ author = "A. Bassetto and M. Ciafaloni and G. Marchesini"
       author         = "Abdullin, S. and Azzi, P. and Beaudette, F. and Janot, P.
                         and Perrotta, A.",
       title          = "{The fast simulation of the CMS detector at LHC}",
-      collaboration  = "CMS Collaboration",
+      collaboration  = "CMS",
       journal        = "J.Phys.Conf.Ser.",
       volume         = "331",
       pages          = "032049",
@@ -5220,13 +5220,15 @@ author = "A. Bassetto and M. Ciafaloni and G. Marchesini"
       SLACcitation   = "%%CITATION = 00462,331,032049;%%",
 }
 
-@article{CMS-DP-2010-039,
+@techreport{CMS-DP-2010-039,
       title         = "{Comparison of the Fast Simulation of CMS with the first
                        LHC data}",
-      collaboration = "CMS Collaboration",
+      institution   = "CERN",
+      collaboration = "CMS",
+      address       = "Geneva",
+      number        = "CMS-DP-2010-039",
       month         = "Oct",
       year          = "2010",
-      note          = "CMS-DP-2010-039"
 }
 
 @article{Agostinelli2003250,
@@ -5441,15 +5443,15 @@ keywords = "Confidence level computation Poisson statistical"
       year           = {2012}
 }
 
-@techreport{CMS-PAS-SUS-13-020,
-      title         = "{Phenomenological MSSM interpretation of the CMS 7 and 8
-                       TeV results}",
-      institution   = "CERN",
-      collaboration = "CMS Collaboration",
-      address       = "Geneva",
-      number        = "CMS-PAS-SUS-13-020",
-      year          = "2014",
+@article{CMS-PAS-SUS-13-020,
+  collaboration = {CMS},
+  title         = {Phenomenological MSSM interpretation of the CMS 7 and 8
+                  TeV results},
+  JOURNAL      = "CMS Physics Analysis Summary",
+  volume       = "\href{http://cdsweb.cern.ch/record/1693148}{CMS-PAS-SUS-13-020}",
+  YEAR         = "2014"
 }
+
 
 @article{Djouadi:1998di,
       author         = "Djouadi, A. and others",
@@ -5464,8 +5466,8 @@ keywords = "Confidence level computation Poisson statistical"
       SLACcitation   = "%%CITATION = HEP-PH/9901246;%%",
 }
 
-@article{robert2001bayesian,
-  title={The Bayesian Choice: From Decision-Theoretic Foundations to Computational Implementation (Springer Texts in Statistics) by},
+@book{robert2001bayesian,
+  title={The Bayesian Choice: From Decision-Theoretic Foundations to Computational Implementation (Springer Texts in Statistics)},
   author={Robert, Christian P},
   year={2001},
   publisher={Springer-Verlag New York}
@@ -5473,9 +5475,8 @@ keywords = "Confidence level computation Poisson statistical"
 
 @book{o2004bayesian,
   title={Bayesian inference},
-  author={O'Hagan, Anthony and Forster, Jonathan and Kendall, Maurice G},
-  year={2004},
-  publisher={Arnold London}
+  author={O'Hagan, Anthony},
+  publisher={Number Vol. 2B in Kendall's Advanced Theory of Statistics. Edward Arnold, London 1994.}
 }
 
 @book{bib:NumRec,
@@ -5558,7 +5559,7 @@ archivePrefix  = "arXiv",
   collaboration = {ATLAS},
   title         = {ATLAS Supersymmetry (SUSY) searches},
   journal       = {ATLAS Wiki},
-  note          = {https://twiki.cern.ch/twiki/bin/view/AtlasPublic/SupersymmetryPublicResults, Topic revision: r437},
+  note          = {\url{https://twiki.cern.ch/twiki/bin/view/AtlasPublic/SupersymmetryPublicResults}, Topic revision: r437},
   url           = {https://twiki.cern.ch/twiki/bin/view/AtlasPublic/SupersymmetryPublicResults},
   year          = {2014}
 }
@@ -5636,18 +5637,19 @@ archivePrefix  = "arXiv",
 
 % --- Stop and related -------------------------------------
 
-@techreport{CMS-PAS-SUS-13-015,
-      title         = "{Search for top squarks in multijet events with large
-                       missing momentum in proton-proton collisions at 8 TeV}",
-      institution   = "CERN",
-      collaboration = "CMS Collaboration",
-      address       = "Geneva",
-      number        = "CMS-PAS-SUS-13-015",
-      year          = "2013",
+@article{CMS-PAS-SUS-13-015,
+  collaboration = {CMS},
+  title         = {Search for top squarks in multijet events with large
+                  missing momentum in proton-proton collisions at 8 TeV},
+  JOURNAL      = "CMS Physics Analysis Summary",
+  volume       = "\href{http://cdsweb.cern.ch/record/1635353}{CMS-PAS-SUS-13-015}",
+  YEAR         = "2013"
 }
 
 @misc{bib:theta,
      author  = "J. Ott",
-     note     = "\href{www.theta-framework.de}{www.theta-framework.de}"
+     title   = "Theta framework",
+     note    = "\url{www.theta-framework.de}",
+     year    = "Nov. 2014",
 }
 
